Revert "STB-2343: Return all firm office codes + LegacyUserID"